logs/2023-12-04-23-45-20/clientbuild.log
main.c: In function ‘main’:
main.c:114:83: error: expected expression before ‘/’ token
  114 |                                 if (setsockopt(sock_ctl, SOL_SOCKET, SO_RCVTIMEO, /
      |                                                                                   ^
main.c:114:37: error: too few arguments to function ‘setsockopt’
  114 |                                 if (setsockopt(sock_ctl, SOL_SOCKET, SO_RCVTIMEO, /
      |                                     ^~~~~~~~~~
In file included from /usr/include/netinet/in.h:23,
                 from /usr/include/arpa/inet.h:22,
                 from ../common/common.h:16,
                 from ftpClient.h:12,
                 from main.c:1:
/usr/include/x86_64-linux-gnu/sys/socket.h:277:12: note: declared here
  277 | extern int setsockopt (int __fd, int __level, int __optname,
      |            ^~~~~~~~~~
ftpClient.c: In function ‘ftpclient_read_cmd’:
ftpClient.c:63:9: warning: implicit declaration of function ‘read_input’; did you mean ‘readlinkat’? [-Wimplicit-function-declaration]
   63 |         read_input(buf,size);
      |         ^~~~~~~~~~
      |         readlinkat
